# POO1-Trabajos

11a_ej1/: Animal.cpp  Animal.h  CMakeLists.txt  main.cpp
13_RevisarDigitos/: CMakeLists.txt  main.cpp
13b_1/: CMakeLists.txt  array.cpp  array.h  main.cpp
3_ReinaAjedrez/: CMakeLists.txt  main.cpp
4b_1/: CMakeLists.txt  funciones.h  main.cpp
4b_3/: CMakeLists.txt  funciones.h  main.cpp
4b_4/: CMakeLists.txt  funciones.h  main.cpp
4b_5/: CMakeLists.txt  funciones.h  main.cpp
4b_6/: CMakeLists.txt  funciones.h  main.cpp
5_HoraMilitar/: CMakeLists.txt  main.cpp
6_MaxPot2/: CMakeLists.txt  main.cpp
6a_1/: CMakeLists.txt  funciones.h  main.cpp
6a_2/: CMakeLists.txt  funciones.h  main.cpp
6a_3/: CMakeLists.txt  funciones.h  main.cpp
6b_1/: CMakeLists.txt  funciones.h  main.cpp
6b_2/: CMakeLists.txt  funciones.h  main.cpp
7_HoraRandom/: CMakeLists.txt  main.cpp
7a_ej1/: CMakeLists.txt  funciones.h  main.cpp
7a_ej2/: CMakeLists.txt  main.cpp
8_IntercambiarNumero/: CMakeLists.txt  main.cpp
8a_1/: CMakeLists.txt  CTriangulo.cpp  CTriangulo.h  main.cpp
8a_2/: CCilindro.cpp  CCilindro.h  CMakeLists.txt  main.cpp
8a_teoria/: CMakeLists.txt  Cperro.cpp  Cperro.h  main.cpp
9a_1/: CAlumno.cpp  CAlumno.h  CMakeLists.txt  CProfesor.cpp  CProfesor.h  (+2 more)
IntentoLocura/: Algoritmos.h  CMakeLists.txt  Clases.h  Grafico.h  InputOutput.h  Tipos.h  main.cpp
Parte2/: CBattleBox.cpp  CBattleBox.h  CMakeLists.txt  CMenu.cpp  CMenu.h  CObjeto.h  CObstaculo.h  CRobot.cpp  CRobot.h  Coord.h  Tipos.h  main.cpp  simulacion.h
Parte2/laberintos/: archivo1.txt
(+126 files in other folders)
